--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		
 		
 		<meta charset="utf-8">
-		<title>myFirstHtml</title>		<!--浏览器标题-->
+		<title>FirstHtml</title>		<!--浏览器标题-->
 	</head>
 	
 	<body>		<!--这个元素包含了你想被用户看到的内容，不管是文本，图像，视频，游戏，可播放的音轨或是其他内容。-->
